--- a/package.json
+++ b/package.json
@@ -16,11 +16,17 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "imagekit": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "1.4.5-lts.1",
     "nodemon": "^3.1.9",
     "prisma": "^6.3.1",
     "zod": "^3.24.1"
+  },
+  "pnpm": {
+    "ignoredBuiltDependencies": [
+      "bcrypt"
+    ]
   }
 }
