--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "seed": "node prisma/seed.js"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   },
   "keywords": [],
   "author": "",
@@ -25,10 +29,5 @@
     "nodemon": "^3.1.9",
     "prisma": "^6.3.1",
     "zod": "^3.24.1"
-  },
-  "pnpm": {
-    "ignoredBuiltDependencies": [
-      "bcrypt"
-    ]
   }
 }
