--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
+    "exceljs": "^4.4.0",
     "express": "^4.21.2",
     "imagekit": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
@@ -27,6 +28,7 @@
     "moment": "^2.30.1",
     "morgan": "^1.10.0",
     "multer": "1.4.5-lts.1",
+    "node-xlsx": "^0.24.0",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "prisma": "^6.3.1",
